[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peewee-sqlserver"
version = "1.0.0"
description = "Microsoft SQL Server adapter for Peewee ORM"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Michael de Villiers", email = "michael@cour4g3.me" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "peewee>=3.0.0",
]

[project.optional-dependencies]
pymssql = [
    "pymssql>=2.1.0",
]
pyodbc = [
    "pyodbc>=4.0.0",
]
async = [
    "aioodbc>=0.5.0",
    "greenlet>=1.0.0",
]
all = [
    "pymssql>=2.1.0",
    "pyodbc>=4.0.0",
    "aioodbc>=0.5.0",
    "greenlet>=1.0.0",
]
pool = []  # Pool support is built-in
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Suleman-Elahi/peewee-mssql/peewee-sqlserver"
Documentation = "https://github.com/Suleman-Elahi/peewee-mssql/peewee-sqlserver#readme"
Repository = "https://github.com/Suleman-Elahi/peewee-mssql/peewee-sqlserver"
Issues = "https://github.com/Suleman-Elahi/peewee-mssql/peewee-sqlserver/issues"

[tool.hatch.build.targets.wheel]
packages = ["peewee_sqlserver"]
